# siyuan-bot

./: .gitignore  CHANGELOG.md
NoneBot/: .env  README.md  pyproject.toml
NoneBot/src/plugins/: test.py
NoneBot/src/plugins/siyuan/: __init__.py  client.py  config.py  data.py  pgp.py  reply.py  rule.py  utils.py
NoneBot/src/plugins/siyuan/plugins/: help.py
NoneBot/src/plugins/siyuan/plugins/account/: __init__.py  bind.py  config.py  key.py  set.py  user.py
NoneBot/src/plugins/siyuan/plugins/inbox/: __init__.py  middleware.py  settings.py  transfer.py
QQ-Bot/: bot.py
QQ-Bot/client/: __init__.py
QQ-Bot/type/: __init__.py  result.py
