[project]
name = "siyuan-bot"
version = "0.1.0"
description = "siyuan-bot"
readme = "README.md"
requires-python = ">=3.11, <4.0"

[tool.poetry]
name = "siyuan-bot"
version = "0.1.0"
description = ""
authors = ["Zuoqiu Yingyi <49649786+Zuoqiu-Yingyi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pgpy = "^0.6.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_plugin_localstore"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]

# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html
[tool.black]
line-length = 1024

# https://beta.ruff.rs/docs/settings/
[tool.ruff]
line-length = 320

[tool.ruff.lint.isort]
from-first = true
case-sensitive = true
